# cgl-higgsfield

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: EXTENDING.md  MODEL_SCHEMAS.md
src/higgsfield_unlimited_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  errors.py  registry.py  server.py  verify.py
